# frankfurte-rs

./: .gitignore  Cargo.toml  README.md  deny.toml  docker-compose.yml  justfile
.github/workflows/: audit.yml  check.yml  msrv.yml  release.yml
assets/: demo.tape
cli/: Cargo.toml
cli/src/: main.rs
cli/src/cli/: convert.rs  currencies.rs  mod.rs  period.rs  utils.rs
cli/tests/: cli.rs  commands.rs  error.rs
cli/tests/commands/: convert.rs  currencies.rs  mod.rs  period.rs
cli/tests/shared/: mod.rs
lib/: Cargo.toml
lib/examples/: basic.rs
lib/src/: data.rs  error.rs  lib.rs
lib/src/api/: convert.rs  currencies.rs  mod.rs  period.rs  shared.rs
lib/src/data/: currency.rs  date.rs  mod.rs
lib/tests/: base.rs  endpoint_convert.rs  endpoint_period.rs
lib/tests/shared/: mod.rs
