[workspace]
members = ["lib", "cli"]
default-members = ["cli"]
resolver = "2"

[workspace.package]
authors = ["Rolv Apneseth"]
version = "0.0.7"
edition = "2024"
readme = "./README.md"
license = "MIT"
repository = "https://github.com/rolv-apneseth/frankfurters"
rust-version = "1.85.0"

[workspace.dependencies]
serde_json = { version = "1.0.142", features = ["preserve_order"] }
enum_dispatch = { version = "0.3.13" }
chrono = { version = "0.4.41", features = ["now", "serde"] }
strum = { version = "0.27.2", features = ["derive"] }
url = { version = "2.5.4", features = ["serde"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
