[workspace]
members = ["lib", "cli"]
default-members = ["cli"]
resolver = "2"

[workspace.package]
authors = ["Rolv Apneseth"]
version = "0.0.8"
edition = "2024"
readme = "./README.md"
license = "MIT"
repository = "https://github.com/rolv-apneseth/frankfurters"
rust-version = "1.88.0"

[workspace.dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
enum_dispatch = { version = "0.3" }
chrono = { version = "0.4", features = ["now", "serde"] }
strum = { version = "0.28", features = ["derive"] }
url = { version = "2.5", features = ["serde"] }
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
