[package]
name = "lib_frankfurter"
description = "Rust wrapper around the Frankfurter API"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }

[dependencies]
serde_json = { workspace = true }
enum_dispatch = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true }
url = { workspace = true }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "^1.0", features = ["derive"] }
thiserror = { version = "2.0.12" }
fast-float-compare = { version = "0.1.1" }

[dev-dependencies]
tokio = { workspace = true }
pretty_assertions = { version = "1.4.1" }
proptest = "1.9.0"
